--- a/index.html
+++ b/index.html
@@ -6,18 +6,14 @@
     <meta name="keywords" content="css, html5, css framework"/>
     <meta name="description" content="CSS Framework for Dummies"/>
     <link rel="stylesheet" href="tacit.min.css"/>
+    <script type="text/javascript" src="./prism.js">
+    </script>
+
     <title>tacit</title>
     <link rel="icon" type="image/png" href="./tacit_logo.png"/>
   </head>
   <body>
     <section>
-      <header>
-        <nav>
-          <ul>
-            <li><code>VERSION</code></li>
-          </ul>
-        </nav>
-      </header>
       <article>
         <figure>
           <img src="./tacit_logo.svg" alt="tacit logo" style="max-height: 100px;"/>
@@ -29,12 +25,12 @@
           <a href="https://github.com/yegor256">myself</a>.
           This is how your website will look if you add just this code to your HTML:
         </p>
-        <pre>&lt;!DOCTYPE html&gt;
+        <pre> <code class="language-html">&lt;!DOCTYPE html&gt;
 &lt;html&gt;
   &lt;head&gt;
     &lt;link rel="stylesheet" href="https://cdn.rawgit.com/yegor256/tacit/gh-pages/tacit-css-VERSION.min.css"/&gt;
   &lt;/head&gt;
-&lt;/html&gt;</pre>
+&lt;/html&gt;</code></pre>
         <p>
           You should <strong>not</strong> use any CSS classes to make your HTML code look nice. Just
           make sure it is <a href="http://www.w3.org/TR/html5/">HTML5</a>
@@ -50,6 +46,7 @@
           <a href="https://validator.w3.org/check?uri=https%3A%2F%2Fyegor256.github.io%2Ftacit%2F&amp;doctype=Inline">HTML</a> and
           <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fyegor256.github.io%2Ftacit%2F&amp;profile=css3">CSS</a>.
         </p>
+        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
         <h2>Forms</h2>
         <form method="get" action="#">
           <fieldset>
